--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Africa -- Discovery and exploration'
 - !lcc 'DT'
+- GITenberg
 title: "The Journal of a Mission to the Interior of Africa, in the Year 1805\r\nTogether\
   \ with Other Documents, Official and Private, Relating to the Same Mission, to Which\
   \ Is Prefixed an Account of the Life of Mr. Park"
